# safe-python-executor

./: .dockerignore  .gitignore  Dockerfile  README.md  TEST_CASES.md  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py
app/api/: middleware.py  routes.py
app/errors/: exceptions.py
app/execution/: executor.py  nsjail.cfg  nsjail_config.cfg  wrapper.py
app/models/: request_schema.py  response_schema.py
